--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -1,9 +1,11 @@
 /* Base Styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 .dashboard {
   padding: 20px;
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   width:100%;
 }
+
 
 .date-picker-container {
   display: flex;
@@ -47,21 +49,26 @@
 /* Stats Styles */
 .stats {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-bottom: 20px;
 }
 
 .stat-item {
   background-color: #f8f9fa;
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 5px;
   text-align: center;
-  width: 23%;
+  width: 200px;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .stat-item img {
   width: 20px;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 
 .stat-change {
@@ -196,4 +203,20 @@
     width: 100%;
     margin-bottom: 20px;
   }
+}
+
+#datteePickeer input{
+  width: 150px;
+  height: 30px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Poppins';
+  color: gray;
+}
+#titleId{
+  font-size: 28px;
+  font-weight: 600;
+
 }
