--- a/src/Components/Coupon/Coupon.css
+++ b/src/Components/Coupon/Coupon.css
@@ -1,10 +1,10 @@
-.dashboard {
+/* .dashboard {
     padding: 20px;
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
     width: 1300px;
     margin: 0 auto;
-  }
+  } */
   
   img {
     height: 50px;
