--- a/src/Forgot/forgot.css
+++ b/src/Forgot/forgot.css
@@ -1,31 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    background-color: #f4f7fc;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 
 .forgot-password-container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 90vh; /* Increase height of container */
+    /* border: 1px solid red; */
+    height: 100vh; /* Increase height of container */
 }
 
 .forgot-password-form {
     background-color: #ffffff;
-    padding: 30px;
+    padding: 40px;
     width: 350px; 
     height: 310px;/* Adjust width as needed */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* border: 1px solid red; */
 }
 
 h2 {
@@ -41,33 +38,34 @@ p {
     font-weight: 400;
 }
 
-input[type="email"] {
+.forget-input {
     width: calc(90% - 20px);
     padding: 18px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     border: 1px solid #ddd;
     border-radius: 0px;
     font-size: 13px;
     color:  #1F1F1F;
+    width: 89%;
     
 }
 
-button {
+.forget-button {
     background-color: 
     #004AAC;
     color: #ffffff;
     border: none;
-    padding: 15px 0;
+    padding: 18px 0;
     border-radius: 10px;
     
     cursor: pointer;
-    width: 95%;
-    margin-bottom: 10px;
+    width: 100%;
+    /* margin-bottom: 10px; */
     font-size: 12px;
-    margin-top: 8px;
+    /* margin-top: 8px; */
 }
 
-button:hover {
+.forget-button:hover {
     background-color: #15468d;
 }
 
@@ -86,4 +84,30 @@ button:hover {
 .success-message, .error-message {
     font-size: 14px;
     margin-bottom: 15px;
+}
+.forget-header-sub{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 26px;
+}
+.forget-header{
+    font-size: 20px;
+    font-weight: 600;
+
+}
+.forget-sub{
+    color: grey;
+    font-size: 14px;
+    padding-top: 8px;
+}
+
+.forget-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* border:1px solid red; */
+    height: 160px;
+    width: 100%;
 }
