--- a/src/Components/Coupon/Coupon.css
+++ b/src/Components/Coupon/Coupon.css
@@ -8,7 +8,7 @@ body {
   padding: 20px;
   font-family: 'Poppins', sans-serif;
   background-color: #f8f9fa;
-  width: 1300px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -35,8 +35,8 @@ h2 {
   border-radius: 10px;
   padding: 15px;
   text-align: left;
-  width: 200px;
-  height: 85px;
+  width: 15.5vw;
+  height: 7vw;
   margin-right: 25px;
   font-family: 'Poppins', sans-serif;
 }
@@ -62,9 +62,8 @@ h2 {
   display: flex;
   flex-direction: column; 
   gap: 10px; /* Space between the buttons */
-  position: absolute; /* Allows precise placement */
-  right: 0; /* Positions the buttons to the far right */
-  top: 150PX; 
+ /* Positions the buttons to the far right */
+  top: 161PX; 
   font-family: 'Poppins', sans-serif;
 }
 
@@ -75,9 +74,10 @@ h2 {
   padding: 10px 33px;
   cursor: pointer;
   margin-top: 0; 
-  margin-right: 80px;
+  margin-right: 50px;
   font-family: 'Poppins', sans-serif;
   gap: 3px;
+  left: 30px;
 }
 
 .verify-btn {
