chart and graph done homeepage

--- a/src/Components/Topbar/TopBar.css
+++ b/src/Components/Topbar/TopBar.css
@@ -1,5 +1,9 @@
 /* TopBar styling */
 .topbar {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   background-color: #004AAC;
   display: flex;
   justify-content: space-between;
