--- a/src/Components/Coupon/Coupon.css
+++ b/src/Components/Coupon/Coupon.css
@@ -1,16 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-body {
-  font-family: 'Poppins', sans-serif;
-}
 
-.dashboard {
+
+.coupon-dashboard {
   padding: 20px;
   font-family: 'Poppins', sans-serif;
   background-color: #f8f9fa;
-  width: 1300px;
-  margin: 0 auto;
+  width: 100%;
+  margin-top: 50px;
 }
 
 img {
