--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,17 +1,11 @@
 /* Review.css */
 
-/* General styles */
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-  }
+
   
-  .app {
-    max-width: 1200px;
-    margin: 0 auto;
+  .review-app {
+    width: 100%;
     padding: 20px;
+    margin-top: 50px;
   }
   
   /* Top bar styles */
