--- a/src/Components/scanstar/review.css
+++ b/src/Components/scanstar/review.css
@@ -1,17 +1,12 @@
 /* Review.css */
 
-/* General styles */
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-  }
+
   
-  .app {
-    max-width: 1200px;
-    margin: 0 auto;
+  .reviews-app {
+  width: 94vw;
+  
     padding: 20px;
+    margin-top: 50px;
   }
   
   /* Top bar styles */
