--- a/src/Components/Topbar/TopBar.css
+++ b/src/Components/Topbar/TopBar.css
@@ -4,6 +4,7 @@
   top: 0px;
   left: 0px;
   right: 0px;
+  z-index: 1000;
   background-color: #004AAC;
   display: flex;
   justify-content: space-between;
