--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -6,6 +6,7 @@
   font-family: 'Poppins', sans-serif;
   width:100%;
   margin-top: 50px;
+  background-color: rgba(232, 232, 246, 0.677);
   /* border: 1px solid red; */
 }
 
@@ -69,7 +70,7 @@
   align-items: start;
   flex-direction: column;
   
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -84,25 +85,31 @@
 }
 
 /* Review Styles */
-.reviews-group {
+.home-reviews-group {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  /* justify-content: space-between; */
+  flex-direction: row;
+  gap:20px;
+  padding: 20px ;
 }
 
+
+.review-breakdown {
+ 
+  width: 50%;
+}
+.recent-reviews{
+  width: 100%;
+}
 .recent-reviews,
 .review-breakdown {
+  /* margin-bottom: 20px; */
+  /* font-size: 18px; */
   background-color: #ffffff;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 16px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 48%;
-}
-
-.recent-reviews h2,
-.review-breakdown h2 {
-  margin-bottom: 20px;
-  font-size: 18px;
+ 
 }
 
 .review {
@@ -127,16 +134,7 @@
   margin-right: 5px;
 }
 
-.see-all {
-  background-color: #004AAC;
-  color: #ffffff;
-  border: none;
-  padding: 10px 15px;
-  margin-top: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 14px;
-}
+
 
 .review-breakdown .tabs {
   display: flex;
@@ -273,5 +271,20 @@ align-items: start;
 .home-charts{
 display: flex;
 gap: 20px;
-padding: 20px;
+padding: 0px 20px;
+
+}
+.home-recent-top-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.see-all {
+  background-color: #004AAC;
+  color: #ffffff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
 }
